--- a/app/css/style.css
+++ b/app/css/style.css
@@ -35,7 +35,9 @@ hr {
 }
 
 .container, .container-fluid {
+  margin: 0px;
   padding: 0px;
+  width: 100%;
 }
 
 /*.title {
